--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "firebase": "^9.19.1",
     "mapbox-gl": "^2.13.0",
     "maplibre-gl": "^2.4.0",
     "next": "13.3.0",
