--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "dependencies": {
     "@mapbox/search-js-react": "^1.0.0-beta.15",
+    "@turf/distance": "^6.5.0",
     "autoprefixer": "10.4.14",
+    "axios": "^1.3.5",
+    "distance-calculator-js": "^1.0.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^9.19.1",
