--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
     "tailwindcss": "3.3.1"
