--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-select": "^5.7.2",
     "react-toastify": "^9.1.2",
     "styled-components": "^5.3.9",
-    "tailwindcss": "3.3.1"
+    "tailwindcss": "3.3.1",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "tailwind-styled-components": "^2.2.0"
