--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://pavlosantoniou13.github.io/carpool/",
   "name": "carpool",
   "version": "0.1.0",
   "private": true,
@@ -7,7 +8,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@mapbox/search-js-react": "^1.0.0-beta.15",
@@ -18,6 +21,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^9.19.1",
+    "gh-pages": "^5.0.0",
     "mapbox-gl": "^2.13.0",
     "maplibre-gl": "^2.4.0",
     "next": "13.3.0",
